--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "its-compiler-js",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "type": "module",
     "description": "JavaScript/TypeScript implementation of the Instruction Template Specification (ITS) compiler",
     "main": "dist/index.js",
@@ -58,12 +58,13 @@
         "chalk": "^5.3.0",
         "chokidar": "^3.5.3",
         "commander": "^11.0.0",
+        "jsep": "^1.4.0",
         "node-fetch": "^3.3.2"
     },
     "devDependencies": {
+        "@eslint/js": "^9.0.0",
         "@types/jest": "^29.0.0",
         "@types/node": "^20.0.0",
-        "@eslint/js": "^9.0.0",
         "@typescript-eslint/eslint-plugin": "^8.0.0",
         "@typescript-eslint/parser": "^8.0.0",
         "eslint": "^9.0.0",
